# goit-pyweb-hw-08

./: .gitignore  README.md  app.py  cache.py  connect.py  consumer_email.py  consumer_sms.py  docker-compose.yml  load_data.py  main.py  models.py  producer.py  pyproject.toml  run_scraper.py
data/: authors.json  quotes.json
scraper/scraper/: pipelines.py  settings.py
scraper/scraper/spiders/: quotes.py
static/css/: styles.css
templates/: index.html
