[project]
name = "quotes-db-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymongo (>=4.13.2,<5.0.0)",
    "mongoengine (>=0.29.1,<0.30.0)",
    "configparser (>=7.2.0,<8.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "redis-lru (>=0.1.2,<0.2.0)",
    "faker (>=37.4.2,<38.0.0)",
    "pika (>=1.3.2,<2.0.0)",
    "flask (>=3.1.1,<4.0.0)"
]

# Додай цю секцію нижче, після секції [project]
[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"